CacheBus integration (clustering) and async cache ops